--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <body>
         <n>Go  https://akazascd.github.io/</n>
         <n>Morse says:  ––··· ––··· –···· ––··· ····– ····· </n>
+        <n>copy that</n>
 
     </body>
 </html>
